--- a/source/_data/keep.yml
+++ b/source/_data/keep.yml
@@ -10,10 +10,10 @@ style:
   primary_color: "#0066CC"
 
   # Avatar (You can use local image or image external link)
-  avatar: /images/avatar.svg
+  avatar: /images/Sardine-avatar.svg
 
   # Favicon (You can use local image or image external link)
-  favicon: /images/logo.svg
+  favicon: /images/Sardine-logo.svg
 
   # Article image align position, value: left | center
   article_img_align: left
