切换主题为icarus

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: biuaxia
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: biuaxia
+language: zh-CN
 timezone: ''
 
 # URL
@@ -98,7 +98,7 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 # theme: landscape
-theme: keep
+theme: icarus
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
