--- a/package.json
+++ b/package.json
@@ -12,20 +12,18 @@
     "version": "5.4.0"
   },
   "dependencies": {
+    "bulma-stylus": "^0.8.0",
     "hexo": "^5.0.0",
-    "hexo-all-minifier": "^0.5.7",
     "hexo-blog-encrypt": "^3.1.6",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
-    "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
-    "hexo-generator-searchdb": "^1.3.4",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
-    "hexo-theme-keep": "^3.4.3",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-theme-icarus": "^4.3.0"
   }
 }
