--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -235,6 +235,7 @@ widgets:
       Picx: "https://picx.xpoet.cn/#/upload?utm_source=biuaxia.cn"
       IconFont: "https://www.iconfont.cn?utm_source=biuaxia.cn"
       jwt解析: "https://jwt.io?utm_source=biuaxia.cn"
+      微信开发平台: "https://mp.weixin.qq.com?utm_source=biuaxia.cn"
   # Categories widget configurations
   - # Where should the widget be placed, left sidebar or right sidebar
     position: left
