--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -356,3 +356,20 @@ providers:
   fontcdn: google
   # Name or URL of the fontawesome icon font CDN provider
   iconcdn: fontawesome
+# Comment
+comment:
+    type: gitalk
+    client_id: 6cf4270669c13d91f481
+    client_secret: b14459676a94c8012ebfa430435282d45968932f
+    repo: Sardine
+    owner: biuaxia
+    admin:
+        - biuaxia
+    per_page: 20                    # 可选填
+    distraction_free_mode: false    # 可选填
+    pager_direction: last           # 可选填
+    create_issue_manually: false    # 可选填
+    proxy:                          # 可选填
+    flip_move_options:              # 可选填
+    enable_hotkey: true             # 可选填
+    language: zh-CN                 # 可选填
