--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -239,6 +239,7 @@ widgets:
       微信开发平台: "https://mp.weixin.qq.com?utm_source=biuaxia.cn"
       字幕库: "http://zimuku.org?utm_source=biuaxia.cn"
       字幕-SubHD: "https://subhd.tv?utm_source=biuaxia.cn"
+      免费考研资源网: "http://qzbltushu.ys168.com?utm_source=biuaxia.cn"
       蜀ICP备19024339号-1: "http://www.beian.miit.gov.cn?utm_source=biuaxia.cn"
   # Calolitegories widget configurations
   - # Where should the widget be placed, left sidebar or right sidebar
