--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
-    "hexo-theme-icarus": "^4.3.0"
+    "hexo-theme-icarus": "4.4.0"
   }
 }
