--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -209,7 +209,10 @@ widgets:
       字幕库: "http://zimuku.org?utm_source=biuaxia.cn"
       字幕-SubHD: "https://subhd.tv?utm_source=biuaxia.cn"
       Newlearnerの小站: "https://www.newlearner.site?utm_source=biuaxia.cn"
+      # Hu60 友链
       嗨客导航_纯净的浏览器主页: "https://hik.win?utm_source=biuaxia.cn"
+      ZNGG在线工具: "https://zn.gg?utm_source=biuaxia.cn"
+      # Hu60 友链 End
       免费考研资源网: "http://qzbltushu.ys168.com?utm_source=biuaxia.cn"
       蜀ICP备19024339号-1: "http://www.beian.miit.gov.cn?utm_source=biuaxia.cn"
   # Archives widget configurations
