--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -210,6 +210,7 @@ widgets:
       字幕-SubHD: "https://subhd.tv?utm_source=biuaxia.cn"
       Newlearnerの小站: "https://www.newlearner.site?utm_source=biuaxia.cn"
       # Hu60 友链
+      虎绿林: "https://hu60.cn/q.php/index.index.html?utm_source=biuaxia.cn"
       嗨客导航_纯净的浏览器主页: "https://hik.win?utm_source=biuaxia.cn"
       ZNGG在线工具: "https://zn.gg?utm_source=biuaxia.cn"
       # Hu60 友链 End
