--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -184,7 +184,7 @@ sidebar:
   # Right sidebar configurations
   right:
     # Whether the sidebar sticks to the top when page scrolls
-    sticky: false
+    sticky: true
 # Sidebar widget configurations
 # http://ppoffice.github.io/hexo-theme-icarus/categories/Widgets/
 widgets:
