--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -105,7 +105,7 @@ navbar:
   links:
     View on GitHub:
       icon: fab fa-github
-      url: "https://github.com/biuaxia/Sardine?utm_source=biuaxia.cn"
+      url: "https://github.com/biuaxia/Sardine"
 # Page footer configurations
 footer:
   # Links to be shown on the right of the footer section
@@ -251,6 +251,9 @@ widgets:
       RSS:
         icon: fas fa-rss
         url: /atom.xml
+      Sitemap:
+        icon: fas fa-map
+        url: /sitemap.xml
   # Table of contents widget configurations
   - # Where should the widget be placed, left sidebar or right sidebar
     position: right
