--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -188,6 +188,11 @@ sidebar:
 # Sidebar widget configurations
 # http://ppoffice.github.io/hexo-theme-icarus/categories/Widgets/
 widgets:
+  - # 谷歌广告
+    position: left
+    type: adsense
+    client_id: ca-pub-6674468670651268
+    slot_id: 5356880959
   # Recent posts widget configurations
   - # Where should the widget be placed, left sidebar or right sidebar
     position: left
