--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -105,7 +105,7 @@ navbar:
   links:
     View on GitHub:
       icon: fab fa-github
-      url: "https://github.com/biuaxia/Sardine"
+      url: "https://github.com/biuaxia"
 # Page footer configurations
 footer:
   # Links to be shown on the right of the footer section
