--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -100,7 +100,7 @@ navbar:
     Categories: /categories
     Tags: /tags
     Bookmarks: /bookmark
-    About: /about
+    Resume: /resume
   # Links to be shown on the right of the navigation bar
   links:
     View on GitHub:
