--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -258,13 +258,18 @@ widgets:
     position: left
     type: adsense
     client_id: ca-pub-6674468670651268
-    slot_id: 577300329
+    slot_id: 8310987985
   # Table of contents widget configurations
   - # Where should the widget be placed, left sidebar or right sidebar
     position: right
     type: toc
     # Whether to show the index of each heading
     index: true
+  -
+    position: left
+    type: adsense
+    client_id: ca-pub-6674468670651268
+    slot_id: 5773003298
   # Google FeedBurner email subscription widget configurations
   # -
   #     # Where should the widget be placed, left sidebar or right sidebar
