--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -231,6 +231,7 @@ widgets:
     links:
       Hexo: "https://hexo.io"
       # 固链
+      妖火网: "https://yaohuo.me/waplogin.aspx"
       Newlearnerの小站: "https://www.newlearner.site?utm_source=biuaxia.cn"
       李文周的博客: "https://www.liwenzhou.com?utm_source=biuaxia.cn"
       # 固链 End
