--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -232,6 +232,7 @@ widgets:
       Hexo: "https://hexo.io"
       # 固链
       妖火网: "https://yaohuo.me/waplogin.aspx"
+      Linux就该这么学: "https://www.linuxprobe.com?utm_source=biuaxia.cn"
       Newlearnerの小站: "https://www.newlearner.site?utm_source=biuaxia.cn"
       李文周的博客: "https://www.liwenzhou.com?utm_source=biuaxia.cn"
       # 固链 End
