--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "dependencies": {
     "bulma-stylus": "^0.8.0",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-html-minifier-terser": "^6.0.1",
+    "gulp-uglify-es": "^3.0.0",
     "hexo": "^5.0.0",
     "hexo-blog-encrypt": "^3.1.6",
     "hexo-generator-archive": "^1.0.0",
@@ -23,7 +27,7 @@
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-inferno": "^0.1.3",
-    "hexo-renderer-marked": "^4.0.0",
+    "hexo-renderer-markdown-it": "^5.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
     "hexo-theme-icarus": "4.4.0"
