--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -1,7 +1,7 @@
 # Version of the configuration file
 version: 4.0.0
 # Icarus theme variant, can be "default" or "cyberpunk"
-variant: cyberpunk
+variant: default
 # Path or URL to the website's logo
 logo: /images/Icarus-logo.svg
 # Page metadata configurations
