--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
     "version": "5.4.0"
   },
   "dependencies": {
-    "bulma-stylus": "^0.8.0",
+    "bulma-stylus": "^0.9.1",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-html-minifier-terser": "^6.0.1",
     "gulp-uglify-es": "^3.0.0",
-    "hexo": "^5.0.0",
+    "hexo": "^5.4.0",
     "hexo-blog-encrypt": "^3.1.6",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
+    "hexo-generator-search": "^2.4.3",
     "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-markdown-it": "^5.0.0",
-    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
     "hexo-theme-icarus": "4.4.0"
   }
