--- a/_config.cactus.yml
+++ b/_config.cactus.yml
@@ -185,8 +185,8 @@ gravatar:
 # loads libraries and styles from CDN instead or relying on local files
 cdn:
   enable: true
-  jquery: https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js
-  clipboard: https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.7/clipboard.min.js
-  font_awesome: https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css
-  justified_gallery_css: https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.8.1/css/justifiedGallery.min.css
-  justified_gallery_js: https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.8.1/js/jquery.justifiedGallery.min.js
+  jquery: https://cdn.jsdelivr.net/gh/probberechts/hexo-theme-cactus/source/lib/jquery/jquery.min.js
+  clipboard: https://cdn.jsdelivr.net/gh/probberechts/hexo-theme-cactus/source/lib/clipboard/clipboard.min.js
+  font_awesome: https://cdn.jsdelivr.net/gh/probberechts/hexo-theme-cactus/source/lib/font-awesome/css/all.min.css
+  justified_gallery_css: https://cdn.jsdelivr.net/gh/probberechts/hexo-theme-cactus/source/lib/justified-gallery/css/justifiedGallery.min.css
+  justified_gallery_js: https://cdn.jsdelivr.net/gh/probberechts/hexo-theme-cactus/source/lib/justified-gallery/js/jquery.justifiedGallery.min.js
