--- a/_config.cactus.yml
+++ b/_config.cactus.yml
@@ -5,7 +5,7 @@
 # Link to a page that gives an overview of all your projects.
 # This can be an external link (e.g., to you GitHub profile) or to another
 # page within your website.
-projects_url: http://github.com/biuaxia
+projects_url: http://github.com/biuaxia/Sardine
 
 # Set the page direction to RTL or LTR. default is LTR. (if you set it 'rtl', the 'vazir' font will be loaded.)
 direction: ltr
@@ -22,6 +22,7 @@ nav:
   search: /search
   sitemap: /sitemap.xml
   RSS: /atom.xml
+  projects: projects_url
 
 # Links to your social media accounts.
 # The keys should correspond to Fontawesome icon names
@@ -41,8 +42,8 @@ tags_overview: false
 #   - post_count: whether to show only the x most recent posts.
 #   - sort_updated: sort posts by last modification date instead of creation date.
 posts_overview:
-  show_all_posts: false
-  post_count: 8
+  show_all_posts: true
+  post_count: 10
   sort_updated: false
 
 # Customize the archive view.
