--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
+    "hexo-theme-keep": "^3.6.1",
     "hexo-theme-landscape": "^0.0.3"
   }
 }
